--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
                 <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
             </ul>
             <div class="hzlogo">
-                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></img></a></li>
+                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></a>
             </div>
         </div>  
     </nav>
@@ -27,20 +27,16 @@
 <body>
     <h1>Welkom op mijn blog</h1>
     <div class="grid-container">
-        <div class="grid-item"><p class='text'>Waarom ICT? Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en technologie.</p>
+        <div class="grid-item"><p class="text">Waarom ICT? Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en technologie.</p>
         <a class="readmore" href="opgroeiing.html">Read more</a></div>
-        <div class="grid-item"><p class='text'>Personal SWOT analysis - taken from your SKC document</p>
+        <div class="grid-item"><p class="text">Personal SWOT analysis - taken from your SKC document</p>
         <a class="readmore" href="opgroeiing.html">Read more</a></div>
-        <div class="grid-item"><p class='text'>Programming experience - taken from the SKC questionnaire</p>
+        <div class="grid-item"><p class="text">Programming experience - taken from the SKC questionnaire</p>
         <a class="readmore" href="opgroeiing.html">Read more</a></div>
-        <div class="grid-item"><p class='text'>First feedback - The feedback you had from the SKC assignment and what your thoughts were about that feedback.</p>
+        <div class="grid-item"><p class="text">First feedback - The feedback you had from the SKC assignment and what your thoughts were about that feedback.</p>
         <a class="readmore" href="opgroeiing.html">Read more</a></div>
-        <div class="grid-item"><p class='text'>At least one article about the ICT field of work.</p>
+        <div class="grid-item"><p class="text">At least one article about the ICT field of work.</p>
 <a class="readmore" href="opgroeiing.html">Read more</a></div>
-       
-
-
-
     </div>
 
 </body>
@@ -51,7 +47,7 @@
             <li class="footer-text"><a class="footer-links" target="_blank" href="all courses.pdf">Implementation Regulations HBO-ICT</a></li>
             <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
             <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></lo>
+            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></li>
            
         </ul>
     </div>
