--- a/dashboard.html
+++ b/dashboard.html
@@ -18,8 +18,8 @@
                 <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
             </ul>
             <div class="hzlogo">
-                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></img></a>
-                </li>
+                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></a>
+            
             </div>
         </div>
     </nav>
@@ -28,7 +28,7 @@
 <body>
     <main>
         <h1>Dashboard</h1>
-        <table>
+        <table class="schema">
             <tr>
                 <th>Quarter</th>
                 <th>Course</th>
@@ -38,7 +38,7 @@
             </tr>
             <tr>
                 <td rowspan="6">Blok 1</td>
-                <td>Program- & Career Orientation</td>
+                <td>Program- &amp; Career Orientation</td>
                 <td>Portfolio website presentation</td>
                 <td>2.5 EC</td>
                 <td>n.t.b.</td>
@@ -68,7 +68,7 @@
             <li class="footer-text"><a class="footer-links" target="_blank" href="all courses.pdf">Implementation Regulations HBO-ICT</a></li>
             <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
             <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></lo>
+            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></li>
         </ul>
     </div>
 </footer>
