--- a/opgroeiing.html
+++ b/opgroeiing.html
@@ -21,8 +21,7 @@
                 <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
             </ul>
             <div class="hzlogo">
-                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></img></a>
-                </li>
+                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></a>
             </div>
         </div>
     </nav>
@@ -53,7 +52,7 @@
             <li class="footer-text"><a class="footer-links" target="_blank" href="all courses.pdf">Implementation Regulations HBO-ICT</a></li>
             <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
             <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></lo>
+            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></li>
         </ul>
     </div>
 </footer>
