--- a/faq.html
+++ b/faq.html
@@ -18,8 +18,7 @@
                 <li><a class="navigation-links" id="faq" href="faq.html"><strong>FAQ</strong></a></li>
             </ul>
             <div class="hzlogo">
-                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></img></a>
-                </li>
+                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></a>
             </div>
         </div>
     </nav>
@@ -59,14 +58,11 @@
                     href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
                     and Examination Regulations</a></li>
             <li class="footer-text"><a class="footer-links" target="_blank" 
-                href="all courses.pdf">Implementation
-                    Regulations HBO-ICT</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a>
-            </li>
+                href="all courses.pdf">Implementation Regulations HBO-ICT</a></li>
+            <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
             <li class="footer-text"><a class="footer-links" target="_blank"
                     href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ
-                    Github</a></lo>
+            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></li>
         </ul>
     </div>
 </footer>
