--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="vuurwerk.svg">
-
     <nav>
         <div class="nav-content">
             <ul class="navigation-bar">
@@ -20,13 +19,9 @@
                 <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
             </ul>
             <div class="hzlogo">
-                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></img></a>
-                </li>
-            </div>
+                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></a>
+                </div>
         </div>
-
-
-
     </nav>
 </head>
 
@@ -39,9 +34,7 @@
             </section>-->
         </header>
     </main>
-
 </body>
-
 <footer>
     <div class="footer-container">
         <ul class="footer-ul">
@@ -49,8 +42,7 @@
             <li class="footer-text"><a class="footer-links" target="_blank" href="all courses.pdf">Implementation Regulations HBO-ICT</a></li>
             <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
             <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></lo>
-
+            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></li>
         </ul>
     </div>
 </footer>
