--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
     <title>Mijn profiel</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="vuurwerk.svg">
-    
+
     <nav>
         <div class="nav-content">
             <ul class="navigation-bar">
@@ -18,8 +18,7 @@
                 <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
             </ul>
             <div class="hzlogo">
-                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></img></a>
-                </li>
+                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></a>
             </div>
         </div>
     </nav>
@@ -31,19 +30,24 @@
         <article>
             <h3>Over mezelf</h3>
             <article class="profiel-text-container">
-            <p class="profiel-text">Lorem ipsum dolor sit amet. Qui omnis quia vel sint quia id cumque totam At explicabo maiores ad labore atque in officia voluptatum hic repellat perferendis. Eum dolorum omnis id nostrum dolores et dicta incidunt sit voluptatem alias qui iste odit. Et nulla voluptas et galisum autem non atque voluptatum et corporis tenetur. Vel eligendi quam et animi ipsa eum voluptatibus ratione ut facilis repellendus.</p>
-            <ul>
-                <li class="hobbies">Voetbal/Basketbal</li>
-                <li class="hobbies">Voetbal en F1 kijken</li>
-        </article>
-         
-        <div class="blog-foto-container">
-            <img class="blog-foto" src="fotokat.jpg">
-            <img class="blog-foto" src="fotokat2.jpg">
-        </div>
+                <p class="profiel-text">Lorem ipsum dolor sit amet. Qui omnis quia vel sint quia id cumque totam At
+                    explicabo maiores ad labore atque in officia voluptatum hic repellat perferendis. Eum dolorum omnis
+                    id nostrum dolores et dicta incidunt sit voluptatem alias qui iste odit. Et nulla voluptas et
+                    galisum autem non atque voluptatum et corporis tenetur. Vel eligendi quam et animi ipsa eum
+                    voluptatibus ratione ut facilis repellendus.</p>
+                <ul>
+                    <li class="hobbies">Voetbal/Basketbal</li>
+                    <li class="hobbies">Voetbal en F1 kijken</li>
+                </ul>
+            </article>
+
+            <div class="blog-foto-container">
+                <img class="blog-foto" src="fotokat.jpg">
+                <img class="blog-foto" src="fotokat2.jpg">
+            </div>
 
 
-            </ul>
+
         </article>
 
     </main>
@@ -51,11 +55,17 @@
 <footer>
     <div class="footer-container">
         <ul class="footer-ul">
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course and Examination Regulations</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="all courses.pdf">Implementation Regulations HBO-ICT</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></lo>
+            <li class="footer-text"><a class="footer-links" target="_blank"
+                    href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
+                    and Examination Regulations</a></li>
+            <li class="footer-text"><a class="footer-links" target="_blank" href="all courses.pdf">Implementation
+                    Regulations HBO-ICT</a></li>
+            <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a>
+            </li>
+            <li class="footer-text"><a class="footer-links" target="_blank"
+                    href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
+            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ
+                    Github</a></li>
         </ul>
     </div>
 </footer>
