--- a/faq.html
+++ b/faq.html
@@ -18,7 +18,7 @@
                 <li><a class="navigation-links" id="faq" href="faq.html"><strong>FAQ</strong></a></li>
             </ul>
             <div class="hzlogo">
-                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></a>
+                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos/hz-logo.png" alt="hz-logo"></a>
             </div>
         </div>
     </nav>
