--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
                 <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
             </ul>
             <div class="hzlogo">
-                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></a>
+                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos/hz-logo.png" alt="hz-logo"></a>
             </div>
         </div>
     </nav>
@@ -42,8 +42,8 @@
             </article>
 
             <div class="blog-foto-container">
-                <img class="blog-foto" src="fotokat.jpg">
-                <img class="blog-foto" src="fotokat2.jpg">
+                <img class="blog-foto" src="Fotos/fotokat.jpg">
+                <img class="blog-foto" src="Fotos/fotokat2.jpg">
             </div>
 
 
