--- a/index.html
+++ b/index.html
@@ -2,49 +2,52 @@
 <html lang="en">
 
 <head>
-    <title>Startpagina</title>
-    <meta name="description"
-        content="Mijn portfolio bevat mijn motivatie en Studievoortgang voor het studeren van HBO-ICT op de HZ.">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="vuurwerk.svg">
-    <nav>
-        <div class="nav-content">
-            <ul class="navigation-bar">
-                <li><a class="navigation-links" id="startpagina" href="index.html"><strong>Startpagina</strong></a></li>
-                <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
-                <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
-                <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
-                <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
-            </ul>
-            <div class="hzlogo">
-                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos/hz-logo.png" alt="hz-logo"></a>
-                </div>
-        </div>
-    </nav>
+  <title>Startpagina</title>
+  <meta name="description"
+    content="Mijn portfolio bevat mijn motivatie en Studievoortgang voor het studeren van HBO-ICT op de HZ.">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/x-icon" href="/Fotos/vuurwerk.svg">
+  <nav>
+    <div class="nav-content">
+      <ul class="navigation-bar">
+        <li><a class="navigation-links" id="startpagina" href="index.html"><strong>Startpagina</strong></a></li>
+        <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
+        <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
+        <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
+        <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
+      </ul>
+      <div class="hzlogo">
+        <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos/hz-logo.png" alt="hz-logo"></a>
+      </div>
+    </div>
+  </nav>
 </head>
 
 <body>
-    <main>
-        <header>
-            <h1>Startpagina</h1>
-            <!--<section class="midden-stuk">
-                <h2>Welkom op mijn website</h2>
-            </section>-->
-        </header>
-    </main>
+  <main>
+    <header>
+      <h1>Startpagina</h1>
+
+    </header>
+  </main>
 </body>
 <footer>
-    <div class="footer-container">
-        <ul class="footer-ul">
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course and Examination Regulations</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="all courses.pdf">Implementation Regulations HBO-ICT</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></li>
-        </ul>
-    </div>
+  <div class="footer-container">
+    <ul class="footer-ul">
+      <li class="footer-text"><a class="footer-links" target="_blank"
+          href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
+          and Examination Regulations</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank" href="Fotos en pdf/all courses.pdf">Implementation Regulations
+          HBO-ICT</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank"
+          href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a>
+      </li>
+    </ul>
+  </div>
 </footer>
 
 </html>
