--- a/blog.html
+++ b/blog.html
@@ -2,54 +2,72 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="vuurwerk.svg">
-    
-    <nav>
-        <div class="nav-content">
-            <ul class="navigation-bar">
-                <li><a class="navigation-links"  href="index.html"><strong>Startpagina</strong></a></li>
-                <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
-                <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
-                <li><a class="navigation-links" id="blog" href="blog.html"><strong>Blog</strong></a></li>
-                <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
-            </ul>
-            <div class="hzlogo">
-                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos/hz-logo.png" alt="hz-logo"></a>
-            </div>
-        </div>  
-    </nav>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blog</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/x-icon" href="/Fotos/vuurwerk.svg">
+
+  <nav>
+    <div class="nav-content">
+      <ul class="navigation-bar">
+        <li><a class="navigation-links" href="index.html"><strong>Startpagina</strong></a></li>
+        <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
+        <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
+        <li><a class="navigation-links" id="blog" href="blog.html"><strong>Blog</strong></a></li>
+        <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
+      </ul>
+      <div class="hzlogo">
+        <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos/hz-logo.png" alt="hz-logo"></a>
+      </div>
+    </div>
+  </nav>
 </head>
 
 <body>
-    <h1>Welkom op mijn blog</h1>
-    <div class="grid-container">
-        <div class="grid-item"><p class="text">Waarom ICT? Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en technologie.</p>
-        <a class="readmore" href="opgroeiing.html">Read more</a></div>
-        <div class="grid-item"><p class="text">Personal SWOT analysis - taken from your SKC document</p>
-        <a class="readmore" href="opgroeiing.html">Read more</a></div>
-        <div class="grid-item"><p class="text">Programming experience - taken from the SKC questionnaire</p>
-        <a class="readmore" href="opgroeiing.html">Read more</a></div>
-        <div class="grid-item"><p class="text">First feedback - The feedback you had from the SKC assignment and what your thoughts were about that feedback.</p>
-        <a class="readmore" href="opgroeiing.html">Read more</a></div>
-        <div class="grid-item"><p class="text">At least one article about the ICT field of work.</p>
-<a class="readmore" href="opgroeiing.html">Read more</a></div>
+  <h1>Welkom op mijn blog</h1>
+  <div class="grid-container">
+    <div class="grid-item">
+      <p class="text">Waarom ICT? Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en
+        technologie.</p>
+      <a class="readmore" href="opgroeiing.html">Read more</a>
     </div>
+    <div class="grid-item">
+      <p class="text">Personal SWOT analysis - taken from your SKC document</p>
+      <a class="readmore" href="opgroeiing.html">Read more</a>
+    </div>
+    <div class="grid-item">
+      <p class="text">Programming experience - taken from the SKC questionnaire</p>
+      <a class="readmore" href="opgroeiing.html">Read more</a>
+    </div>
+    <div class="grid-item">
+      <p class="text">First feedback - The feedback you had from the SKC assignment and what your thoughts were about
+        that feedback.</p>
+      <a class="readmore" href="opgroeiing.html">Read more</a>
+    </div>
+    <div class="grid-item">
+      <p class="text">At least one article about the ICT field of work.</p>
+      <a class="readmore" href="opgroeiing.html">Read more</a>
+    </div>
+  </div>
 
 </body>
 <footer>
-    <div class="footer-container">
-        <ul class="footer-ul">
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course and Examination Regulations</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="all courses.pdf">Implementation Regulations HBO-ICT</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></li>
-           
-        </ul>
-    </div>
+  <div class="footer-container">
+    <ul class="footer-ul">
+      <li class="footer-text"><a class="footer-links" target="_blank"
+          href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
+          and Examination Regulations</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank" href="Fotos en pdf/all courses.pdf">Implementation Regulations
+          HBO-ICT</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank"
+          href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a>
+      </li>
+
+    </ul>
+  </div>
 </footer>
+
 </html>
