--- a/faq.html
+++ b/faq.html
@@ -2,69 +2,81 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frequently Asked Question about HZ Univeristy</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="vuurwerk.svg">
-    
-    <nav>
-        <div class="nav-content">
-            <ul class="navigation-bar">
-                <li><a class="navigation-links" href="index.html"><strong>Startpagina</strong></a></li>
-                <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
-                <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
-                <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
-                <li><a class="navigation-links" id="faq" href="faq.html"><strong>FAQ</strong></a></li>
-            </ul>
-            <div class="hzlogo">
-                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos/hz-logo.png" alt="hz-logo"></a>
-            </div>
-        </div>
-    </nav>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Frequently Asked Question about HZ Univeristy</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/x-icon" href="/Fotos/vuurwerk.svg">
+
+  <nav>
+    <div class="nav-content">
+      <ul class="navigation-bar">
+        <li><a class="navigation-links" href="index.html"><strong>Startpagina</strong></a></li>
+        <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
+        <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
+        <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
+        <li><a class="navigation-links" id="faq" href="faq.html"><strong>FAQ</strong></a></li>
+      </ul>
+      <div class="hzlogo">
+        <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos/hz-logo.png" alt="hz-logo"></a>
+      </div>
+    </div>
+  </nav>
 </head>
 
 <body>
-    <main>
-        <h1>Veelgestelde vragen</h1>
-        <div class="faq-container">
-            <details>
-                <summary class="faq-questions">Hoe kun je op de HZ een document printen vanaf je laptop?</summary>    
-                <p>Ga naar<a class="faq-links" href="https://hz.mynetpay.nl/" target="_blank"> hz.mynetpay.nl</a> en vul je inloggegevens in. klik hierna op "Web print". Kies een printer en selecteer je document. Controleer de instelling en klik op "Upload selected files". Gebruik je HZ-pas om het printen te voltooien.</p>
-            </details>
-            <details>
-                <summary class="faq-questions">Hoe kun je bij de HZ een document scannen en naar je laptop sturen?</summary>
-                <p>Log in op de printer met je HZ-pas. Klik op "Scan" en plaats je document op het glas. Controleer de instellingen en klik op "Start". Na het scannen log je uit en neem je je document weer mee.</p>
-            </details>
-            <details>
-                <summary class="faq-questions">Hoe kan ik iets kopen in de HZ webshop?</summary>
-                <p>Ga naar<a class="faq-links" href="https://webshop.hz.nl/" target="_blank"> webshop.hz.nl</a>. Klik op inloggen en vul je gegevens in. Kies iets uit en voeg het toe aan je winkelwagen. Hierna kan je afrekenen en je product op de HZ ophalen.  </p>
-            </details>
-            <details>
-                <summary class="faq-questions">Hoe kun je een projectruimte reserveren?</summary>
-                <p>Ga naar <a class="faq-links" href="https://hzuniversity.topdesk.net/" target="_blank">hzuniversity.topdesk.net</a>. Log in en klik op "Reservations", klik hierna op "Reserve a meeting or project room" en daarna op "Reserve a room". Kies een ruimte en tijd uit en vul je gegevens in. Klik als laatst op "Confirm".</p>
-            </details>
-            <details>
-                <summary class="faq-questions">Wat zijn de instructies als je je auto op het parkeerterrein van de HZ wilt parkeren?</summary>
-                <p>Sinds dit jaar zijn er voor HZ'ers plekken beschikbaar in de parkeergarage aan de Kousteensedijk in Middelburg. Zorg er voor dat je je inrijkaart goed bewaard. Op vertoon van je inrijkaart kun je dan bij de servicebalie van het JRCZ een uitrijkaart krijgen.</p>
-            </details>
-        </div>
-    </main>
+  <main>
+    <h1>Veelgestelde vragen</h1>
+    <div class="faq-container">
+      <details>
+        <summary class="faq-questions">Hoe kun je op de HZ een document printen vanaf je laptop?</summary>
+        <p>Ga naar<a class="faq-links" href="https://hz.mynetpay.nl/" target="_blank"> hz.mynetpay.nl</a> en vul je
+          inloggegevens in. klik hierna op "Web print". Kies een printer en selecteer je document. Controleer de
+          instelling en klik op "Upload selected files". Gebruik je HZ-pas om het printen te voltooien.</p>
+      </details>
+      <details>
+        <summary class="faq-questions">Hoe kun je bij de HZ een document scannen en naar je laptop sturen?</summary>
+        <p>Log in op de printer met je HZ-pas. Klik op "Scan" en plaats je document op het glas. Controleer de
+          instellingen en klik op "Start". Na het scannen log je uit en neem je je document weer mee.</p>
+      </details>
+      <details>
+        <summary class="faq-questions">Hoe kan ik iets kopen in de HZ webshop?</summary>
+        <p>Ga naar <a class="faq-links" href="https://webshop.hz.nl/" target="_blank">webshop.hz.nl</a>. Klik op
+          inloggen en vul je gegevens in. Kies iets uit en voeg het toe aan je winkelwagen. Hierna kan je afrekenen en
+          je product op de HZ ophalen. </p>
+      </details>
+      <details>
+        <summary class="faq-questions">Hoe kun je een projectruimte reserveren?</summary>
+        <p>Ga naar <a class="faq-links" href="https://hzuniversity.topdesk.net/"
+            target="_blank">hzuniversity.topdesk.net</a>. Log in en klik op "Reservations", klik hierna op "Reserve a
+          meeting or project room" en daarna op "Reserve a room". Kies een ruimte en tijd uit en vul je gegevens in.
+          Klik als laatst op "Confirm".</p>
+      </details>
+      <details>
+        <summary class="faq-questions">Wat zijn de instructies als je je auto op het parkeerterrein van de HZ wilt
+          parkeren?</summary>
+        <p>Sinds dit jaar zijn er voor HZ'ers plekken beschikbaar in de parkeergarage aan de Kousteensedijk in
+          Middelburg. Zorg er voor dat je je inrijkaart goed bewaard. Op vertoon van je inrijkaart kun je dan bij de
+          servicebalie van het JRCZ een uitrijkaart krijgen.</p>
+      </details>
+    </div>
+  </main>
 </body>
 <footer>
-    <div class="footer-container">
-        <ul class="footer-ul">
-            <li class="footer-text"><a class="footer-links" target="_blank"
-                    href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
-                    and Examination Regulations</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" 
-                href="all courses.pdf">Implementation Regulations HBO-ICT</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank"
-                    href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></li>
-        </ul>
-    </div>
+  <div class="footer-container">
+    <ul class="footer-ul">
+      <li class="footer-text"><a class="footer-links" target="_blank"
+          href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
+          and Examination Regulations</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank" href="Fotos en pdf/all courses.pdf">Implementation Regulations
+          HBO-ICT</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank"
+          href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a>
+      </li>
+    </ul>
+  </div>
 </footer>
 
 </html>
