--- a/opgroeiing.html
+++ b/opgroeiing.html
@@ -2,39 +2,46 @@
 <html lang="en">
 
 <head>
-    <title>Pagina over hoe ik ben opgegroeid met technologie</title>
-    <meta name="description"
-        content="Mijn portfolio bevat mijn motivatie en Studievoortgang voor het studeren van HBO-ICT op de HZ.">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="vuurwerk.svg">
+  <title>Pagina over hoe ik ben opgegroeid met technologie</title>
+  <meta name="description"
+    content="Mijn portfolio bevat mijn motivatie en Studievoortgang voor het studeren van HBO-ICT op de HZ.">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/x-icon" href="'/Fotos/vuurwerk.svg'">
 
 
-    <nav>
-        <div class="nav-content">
-            <ul class="navigation-bar">
-                <li><a class="navigation-links" href="index.html"><strong>Startpagina</strong></a></li>
-                <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
-                <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
-                <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
-                <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
-            </ul>
-            <div class="hzlogo">
-                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos/hz-logo.png" alt="hz-logo"></a>
-            </div>
-        </div>
-    </nav>
-</head>
-<body>
-    <main>
-        <h1>Opgroeien met technologie</h1>
-    </main>
-    <p class="blog-text">Waarom ICT? Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en technologie. Ik herinner me dat ik als kind al uren doorbracht met het spelen van spelletjes op de computer en verschillende gameconsoles. Maar het bleef niet alleen bij het spelen van games; al snel werd ik nieuwsgierig naar hoe deze machines en software eigenlijk werkten. Ik wilde begrijpen hoe alles in elkaar zat: van het opstarten van de computer tot de manier waarop programma's en spellen verschijnen op het scherm. Die nieuwsgierigheid groeide uit tot een passie voor technologie, die me ertoe dreef om steeds meer te leren over de werking van computers en softwareontwikkeling. Om deze reden heb ik er voor gekozen om ICT te studeren op de HZ. </p>
-    <div class="blog-foto-container">
-        <img class="blog-foto" src="/Fotos/Technologie foto1.avif">
-        <img class="blog-foto" src="/Fotos/technologie foto2.avif">
+  <nav>
+    <div class="nav-content">
+      <ul class="navigation-bar">
+        <li><a class="navigation-links" href="index.html"><strong>Startpagina</strong></a></li>
+        <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
+        <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
+        <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
+        <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
+      </ul>
+      <div class="hzlogo">
+        <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos/hz-logo.png" alt="hz-logo"></a>
+      </div>
     </div>
+  </nav>
+</head>
+
+<body>
+  <main>
+    <h1>Opgroeien met technologie</h1>
+  </main>
+  <p class="blog-text">Waarom ICT? Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en
+    technologie. Ik herinner me dat ik als kind al uren doorbracht met het spelen van spelletjes op de computer en
+    verschillende gameconsoles. Maar het bleef niet alleen bij het spelen van games; al snel werd ik nieuwsgierig naar
+    hoe deze machines en software eigenlijk werkten. Ik wilde begrijpen hoe alles in elkaar zat: van het opstarten van
+    de computer tot de manier waarop programma's en spellen verschijnen op het scherm. Die nieuwsgierigheid groeide uit
+    tot een passie voor technologie, die me ertoe dreef om steeds meer te leren over de werking van computers en
+    softwareontwikkeling. Om deze reden heb ik er voor gekozen om ICT te studeren op de HZ. </p>
+  <div class="blog-foto-container">
+    <img class="blog-foto" src="Fotos en pdf/Technologie foto1.avif">
+    <img class="blog-foto" src="Fotos en pdf/technologie foto2.avif">
+  </div>
 
 
 
@@ -46,15 +53,20 @@
 
 
 <footer>
-    <div class="footer-container">
-        <ul class="footer-ul">
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course and Examination Regulations</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="all courses.pdf">Implementation Regulations HBO-ICT</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></li>
-        </ul>
-    </div>
+  <div class="footer-container">
+    <ul class="footer-ul">
+      <li class="footer-text"><a class="footer-links" target="_blank"
+          href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
+          and Examination Regulations</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank" href="Fotos en pdf/all courses.pdf">Implementation Regulations
+          HBO-ICT</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank"
+          href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a>
+      </li>
+    </ul>
+  </div>
 </footer>
 
 </html>
