hz logo gefixt mapje kreeg nieuwe naam

--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
         <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
       </ul>
       <div class="hzlogo">
-        <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos/hz-logo.png" alt="hz-logo"></a>
+        <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos en pdf/hz-logo.png" alt="hz-logo"></a>
       </div>
     </div>
   </nav>
