bezig met opgroeiing

--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/x-icon" href="/Fotos/vuurwerk.svg">
+  <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
 
   <nav>
     <div class="nav-content">
@@ -30,7 +30,7 @@
     <div class="grid-item">
       <p class="text">Waarom ICT? Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en
         technologie.</p>
-      <a class="readmore" href="opgroeiing.html">Read more</a>
+      <a class="readmore" href="Blog posts/opgroeiing.html">Read more</a>
     </div>
     <div class="grid-item">
       <p class="text">Personal SWOT analysis - taken from your SKC document</p>
