--- a/Blog posts/opgroeiing.html
+++ b/Blog posts/opgroeiing.html
@@ -7,17 +7,17 @@
     content="Mijn portfolio bevat mijn motivatie en Studievoortgang voor het studeren van HBO-ICT op de HZ.">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/x-icon" href="'/Fotos/vuurwerk.svg'">
+  <link rel="stylesheet" href="../styles.css">
+  <link rel="icon" type="image/x-icon" href="../Fotos en pdf/vuurwerk.svg">
 
   <nav>
     <div class="nav-content">
       <ul class="navigation-bar">
-        <li><a class="navigation-links" href="index.html"><strong>Startpagina</strong></a></li>
-        <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
-        <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
-        <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
-        <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
+        <li><a class="navigation-links" href="../index.html"><strong>Startpagina</strong></a></li>
+        <li><a class="navigation-links" href="../profile.html"><strong>Profiel</strong></a></li>
+        <li><a class="navigation-links" href="../dashboard.html"><strong>Dashboard</strong></a></li>
+        <li><a class="navigation-links" href="../blog.html"><strong>Blog</strong></a></li>
+        <li><a class="navigation-links" href="../faq.html"><strong>FAQ</strong></a></li>
       </ul>
       <div class="hzlogo">
         <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos en pdf/hz-logo.png" alt="hz-logo"></a>
@@ -29,18 +29,19 @@
 <body>
   <main>
     <h1>Opgroeien met technologie</h1>
+    <p class="blog-text">Waarom ICT? Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en
+      technologie. Ik herinner me dat ik als kind al uren doorbracht met het spelen van spelletjes op de computer en
+      verschillende gameconsoles. Maar het bleef niet alleen bij het spelen van games; al snel werd ik nieuwsgierig naar
+      hoe deze machines en software eigenlijk werkten. Ik wilde begrijpen hoe alles in elkaar zat: van het opstarten van
+      de computer tot de manier waarop programma's en spellen verschijnen op het scherm. Die nieuwsgierigheid groeide
+      uit
+      tot een passie voor technologie, die me ertoe dreef om steeds meer te leren over de werking van computers en
+      softwareontwikkeling. Om deze reden heb ik er voor gekozen om ICT te studeren op de HZ. </p>
+    <div class="blog-foto-container">
+      <img class="blog-foto" src="../Fotos en pdf/Technologie foto1.avif">
+      <img class="blog-foto" src="../Fotos en pdf/technologie foto2.avif">
+    </div>
   </main>
-  <p class="blog-text">Waarom ICT? Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en
-    technologie. Ik herinner me dat ik als kind al uren doorbracht met het spelen van spelletjes op de computer en
-    verschillende gameconsoles. Maar het bleef niet alleen bij het spelen van games; al snel werd ik nieuwsgierig naar
-    hoe deze machines en software eigenlijk werkten. Ik wilde begrijpen hoe alles in elkaar zat: van het opstarten van
-    de computer tot de manier waarop programma's en spellen verschijnen op het scherm. Die nieuwsgierigheid groeide uit
-    tot een passie voor technologie, die me ertoe dreef om steeds meer te leren over de werking van computers en
-    softwareontwikkeling. Om deze reden heb ik er voor gekozen om ICT te studeren op de HZ. </p>
-  <div class="blog-foto-container">
-    <img class="blog-foto" src="Fotos en pdf/Technologie foto1.avif">
-    <img class="blog-foto" src="Fotos en pdf/technologie foto2.avif">
-  </div>
 </body>
 
 <footer>
