--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/x-icon" href="/Fotos/vuurwerk.svg">
+  <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
 
   <nav>
     <div class="nav-content">
