--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/x-icon" href="/Fotos/vuurwerk.svg">
+  <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
   <nav>
     <div class="nav-content">
       <ul class="navigation-bar">
