bezig met dashboard

--- a/Blog posts/opgroeiing.html
+++ b/Blog posts/opgroeiing.html
@@ -7,7 +7,7 @@
     content="Mijn portfolio bevat mijn motivatie en Studievoortgang voor het studeren van HBO-ICT op de HZ.">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../assets/styles.css">
   <link rel="icon" type="image/x-icon" href="../Fotos en pdf/vuurwerk.svg">
 
   <nav>
@@ -20,7 +20,7 @@
         <li><a class="navigation-links" href="../faq.html"><strong>FAQ</strong></a></li>
       </ul>
       <div class="hzlogo">
-        <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos en pdf/hz-logo.png" alt="hz-logo"></a>
+        <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="../Fotos en pdf/hz-logo.png" alt="hz-logo"></a>
       </div>
     </div>
   </nav>
