--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="assets/styles.css">
   <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
 
   <nav>
@@ -28,26 +28,36 @@
   <h1>Welkom op mijn blog</h1>
   <div class="grid-container">
     <div class="grid-item">
-      <p class="text">Waarom ICT? Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en
+      <p class="blog-text-short">Waarom ICT? Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en
         technologie.</p>
-      <a class="readmore" href="Blog posts/opgroeiing.html">Read more</a>
+      <div class="readmore-container">
+        <a class="readmore" href="Blog posts/opgroeiing.html">Read more</a>
+      </div>
     </div>
     <div class="grid-item">
-      <p class="text">Personal SWOT analysis - taken from your SKC document</p>
-      <a class="readmore" href="opgroeiing.html">Read more</a>
+      <p class="blog-text-short">Personal SWOT analysis - taken from your SKC document</p>
+      <div class="readmore-container">
+        <a class="readmore" href="Blog posts/opgroeiing.html">Read more</a>
+      </div>
     </div>
     <div class="grid-item">
-      <p class="text">Programming experience - taken from the SKC questionnaire</p>
-      <a class="readmore" href="opgroeiing.html">Read more</a>
+      <p class="blog-text-short">Programming experience - taken from the SKC questionnaire</p>
+      <div class="readmore-container">
+        <a class="readmore" href="Blog posts/opgroeiing.html">Read more</a>
+      </div>
     </div>
     <div class="grid-item">
-      <p class="text">First feedback - The feedback you had from the SKC assignment and what your thoughts were about
+      <p class="blog-text-short">First feedback - The feedback you had from the SKC assignment and what your thoughts were about
         that feedback.</p>
-      <a class="readmore" href="opgroeiing.html">Read more</a>
+        <div class="readmore-container">
+          <a class="readmore" href="Blog posts/opgroeiing.html">Read more</a>
+        </div>
     </div>
     <div class="grid-item">
-      <p class="text">At least one article about the ICT field of work.</p>
-      <a class="readmore" href="opgroeiing.html">Read more</a>
+      <p class="blog-text-short">At least one article about the ICT field of work.</p>
+      <div class="readmore-container">
+        <a class="readmore" href="Blog posts/opgroeiing.html">Read more</a>
+      </div>
     </div>
   </div>
 
