--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="assets/styles.css">
   <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
 
   <nav>
@@ -31,10 +31,11 @@
     <table class="schema">
       <tr>
         <th>Quarter</th>
-        <th>Course</th>   
+        <th>Course</th>
         <th>Examens</th>
         <th>Behaalbare Studiepunten</th>
         <th>Behaalde Studiepunten</th>
+        <th>Cursus Status</th>
       </tr>
       <tr>
         <td rowspan="3">Blok 1</td>
@@ -42,32 +43,114 @@
         <td>Portfolio website presentation</td>
         <td>2.5 EC</td>
         <td>n.t.b.</td>
+        <td>Bezig</td>
       </tr>
       <tr>
-        <td>Computer Sience Basics</td>
+        <td>Computer Science Basics</td>
+        <td>Written Exam</td>
+        <td>5 EC</td>
+        <td>n.t.b.</td>
+        <td>Bezig</td>
       </tr>
       <tr>
         <td>Programming Basics</td>
+        <td>Practical Assignment</td>
+        <td>5 EC</td>
+        <td>n.t.b.</td>
+        <td>Bezig</td>
       </tr>
       <tr>
+        <td rowspan="3">Blok 2</td>
         <td>...</td>
+        <td>Written Exam</td>
+        <td>12,5 EC</td>
+        <td>n.t.b.</td>
       </tr>
+      <tr>
+        <td rowspan="2">Object Oriented Programming</td>
+        <td>Project</td>
+        <td>5 EC</td>
+        <td>n.t.b.</td>
+      </tr>
+      <tr>
+        <td>aa</td>
+        <td>aa</td>
+        <td>aa</td>
+        
 
 
+      </tr>
+      <tr>
+        <td>Database Systems</td>
+        <td>Practical Assignment</td>
+        <td>2.5 EC</td>
+        <td>n.t.b.</td>
+      </tr>
+      <tr>
+        <td rowspan="3">Blok 3</td>
+        <td>Software Engineering</td>
+        <td>Project</td>
+        <td>5 EC</td>
+        <td>n.t.b.</td>
+      </tr>
+      <tr>
+        <td>Algorithms</td>
+        <td>Written Exam</td>
+        <td>5 EC</td>
+        <td>n.t.b.</td>
+      </tr>
+      <tr>
+        <td>Operating Systems</td>
+        <td>Practical Assignment</td>
+        <td>2.5 EC</td>
+        <td>n.t.b.</td>
+      </tr>
+      <tr>
+        <td rowspan="3">Blok 4</td>
+        <td>Networks</td>
+        <td>Written Exam</td>
+        <td>5 EC</td>
+        <td>n.t.b.</td>
+      </tr>
+      <tr>
+        <td>Security</td>
+        <td>Project</td>
+        <td>5 EC</td>
+        <td>n.t.b.</td>
+      </tr>
+      <tr>
+        <td>Cloud Computing</td>
+        <td>Practical Assignment</td>
+        <td>2.5 EC</td>
+        <td>n.t.b.</td>
+      </tr>
+      <tr>
+        <td rowspan="2">Heel het jaar</td>
+        <td>IT Personality</td>
+        <td>Final Presentation</td>
+        <td>10 EC</td>
+        <td>n.t.b.</td>
+      </tr>
+      <tr>
+        <td>Personal Professional Development: Exploration</td>
+        <td>---</td>
+        <td>---</td>
+        <td>---</td>
+        <td>---</td>
+      </tr>
     </table>
     <style></style>
-
-
   </main>
-
 </body>
+
 <footer>
   <div class="footer-container">
     <ul class="footer-ul">
       <li class="footer-text"><a class="footer-links" target="_blank"
           href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
           and Examination Regulations</a></li>
-      <li class="footer-text"><a class="footer-links" target="_blank" href="Fotos en pdf/all courses.pdf">Implementation Regulations
+      <li class="footer-text"><a class="footer-links" target="_blank" href="Fotos en pdf/all courses.pdf">Implementation
+          Regulations
           HBO-ICT</a></li>
       <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
       <li class="footer-text"><a class="footer-links" target="_blank"
