--- a/blog.html
+++ b/blog.html
@@ -47,11 +47,12 @@
       </div>
     </div>
     <div class="grid-item">
-      <p class="blog-text-short">First feedback - The feedback you had from the SKC assignment and what your thoughts were about
+      <p class="blog-text-short">First feedback - The feedback you had from the SKC assignment and what your thoughts
+        were about
         that feedback.</p>
-        <div class="readmore-container">
-          <a class="readmore" href="Blog posts/opgroeiing.html">Read more</a>
-        </div>
+      <div class="readmore-container">
+        <a class="readmore" href="Blog posts/opgroeiing.html">Read more</a>
+      </div>
     </div>
     <div class="grid-item">
       <p class="blog-text-short">At least one article about the ICT field of work.</p>
@@ -68,7 +69,8 @@
       <li class="footer-text"><a class="footer-links" target="_blank"
           href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
           and Examination Regulations</a></li>
-      <li class="footer-text"><a class="footer-links" target="_blank" href="Fotos en pdf/all courses.pdf">Implementation Regulations
+      <li class="footer-text"><a class="footer-links" target="_blank" href="Fotos en pdf/all courses.pdf">Implementation
+          Regulations
           HBO-ICT</a></li>
       <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
       <li class="footer-text"><a class="footer-links" target="_blank"
