meervoud portfolios hz-logo css verwijderd was niet nodigw

--- a/dashboard.html
+++ b/dashboard.html
@@ -110,7 +110,7 @@
       <tr class="niet-gestart">
         <td rowspan="2">Heel het jaar</td>
         <td>IT Personality</td>
-        <td> </td>
+        <td>Portfolio's</td>
         <td>2.5 EC</td>
         <td><input type="text" id="IP"></td>
       </tr>
@@ -125,7 +125,7 @@
         <td>---</td>
         <td>---</td>
         <td>60 EC</td>
-        <td id="total">0 EC</td>
+        <td id="total"></td>
       </tr>
     </table>
     <!-- Kleur INDEX -->
