--- a/faq.html
+++ b/faq.html
@@ -24,19 +24,19 @@
   </nav>
 </head>
 
-<body>
+<body id="faq-body">
   <main>
     <h1>Veelgestelde vragen</h1>
     <div class="faq-container">
       <details>
         <summary class="faq-questions">Hoe kun je op de HZ een document printen vanaf je laptop?</summary>
-        <p>Ga naar<a class="faq-links" href="https://hz.mynetpay.nl/" target="_blank"> hz.mynetpay.nl</a> en vul je
+        <p class="faq-text">Ga naar <a class="faq-links" href="https://hz.mynetpay.nl/" target="_blank">hz.mynetpay.nl</a> en vul je
           inloggegevens in. klik hierna op "Web print". Kies een printer en selecteer je document. Controleer de
           instelling en klik op "Upload selected files". Gebruik je HZ-pas om het printen te voltooien.</p>
       </details>
       <details>
         <summary class="faq-questions">Hoe kun je bij de HZ een document scannen en naar je laptop sturen?</summary>
-        <p>Log in op de printer met je HZ-pas. Klik op "Scan" en plaats je document op het glas. Controleer de
+        <p class="faq-text">Log in op de printer met je HZ-pas. Klik op "Scan" en plaats je document op het glas. Controleer de
           instellingen en klik op "Start". Na het scannen log je uit en neem je je document weer mee.</p>
       </details>
       <details>
@@ -47,7 +47,7 @@
       </details>
       <details>
         <summary class="faq-questions">Hoe kun je een projectruimte reserveren?</summary>
-        <p>Ga naar <a class="faq-links" href="https://hzuniversity.topdesk.net/"
+        <p class="faq-text">Ga naar <a class="faq-links" href="https://hzuniversity.topdesk.net/"
             target="_blank">hzuniversity.topdesk.net</a>. Log in en klik op "Reservations", klik hierna op "Reserve a
           meeting or project room" en daarna op "Reserve a room". Kies een ruimte en tijd uit en vul je gegevens in.
           Klik als laatst op "Confirm".</p>
@@ -55,7 +55,7 @@
       <details>
         <summary class="faq-questions">Wat zijn de instructies als je je auto op het parkeerterrein van de HZ wilt
           parkeren?</summary>
-        <p>Sinds dit jaar zijn er voor HZ'ers plekken beschikbaar in de parkeergarage aan de Kousteensedijk in
+        <p class="faq-text">Sinds dit jaar zijn er voor HZ'ers plekken beschikbaar in de parkeergarage aan de Kousteensedijk in
           Middelburg. Zorg er voor dat je je inrijkaart goed bewaard. Op vertoon van je inrijkaart kun je dan bij de
           servicebalie van het JRCZ een uitrijkaart krijgen.</p>
       </details>
