blogpost terug knop gefixt

--- a/Blog posts/opgroeiing.html
+++ b/Blog posts/opgroeiing.html
@@ -13,6 +13,7 @@
   <nav>
     <div class="nav-content">
       <ul class="navigation-bar">
+        <li><a class="terug-naar-blog" href="../blog.html"><strong>Terug naar Blog</strong></a></li>
         <li><a class="navigation-links" href="../index.html"><strong>Startpagina</strong></a></li>
         <li><a class="navigation-links" href="../profile.html"><strong>Profiel</strong></a></li>
         <li><a class="navigation-links" href="../dashboard.html"><strong>Dashboard</strong></a></li>
