--- a/profile.html
+++ b/profile.html
@@ -42,8 +42,8 @@
       </article>
 
       <div class="blog-foto-container">
-        <img class="blog-foto" src="Fotos en pdf/fotokat.jpg">
-        <img class="blog-foto" src="Fotos en pdf/fotokat2.jpg">
+        <img class="blog-foto" src="Fotos en pdf/fotokat.jpg" alt="Foto van mijn kat in de tuin">
+        <img class="blog-foto" src="Fotos en pdf/fotokat2.jpg" alt="Foto van mijn kat binnen">
       </div>
 
 
